--- a/1665.mw
+++ b/1665.mw
@@ -3,3 +3,95 @@
 *[[17 september|17]] - [[Filips IV van Spanje]]
 
 [[Categorie: 1660-1669]]
+
+[[af:1665]]
+[[am:1665 እ.ኤ.አ.]]
+[[an:1665]]
+[[ar:1665]]
+[[ast:1665]]
+[[az:1665]]
+[[be:1665]]
+[[be-x-old:1665]]
+[[bg:1665]]
+[[bh:१६६५]]
+[[bn:১৬৬৫]]
+[[bpy:মারি ১৬৬৫]]
+[[br:1665]]
+[[bs:1665]]
+[[ca:1665]]
+[[co:1665]]
+[[cs:1665]]
+[[cv:1665]]
+[[cy:1665]]
+[[da:1665]]
+[[de:1665]]
+[[el:1665]]
+[[en:1665]]
+[[eo:1665]]
+[[es:1665]]
+[[et:1665]]
+[[eu:1665]]
+[[fi:1665]]
+[[fr:1665]]
+[[fy:1665]]
+[[ga:1665]]
+[[gd:1665]]
+[[gl:1665]]
+[[he:1665]]
+[[hi:1665]]
+[[hr:1665.]]
+[[ht:1665 (almanak gregoryen)]]
+[[hu:1665]]
+[[hy:1665]]
+[[ia:1665]]
+[[id:1665]]
+[[io:1665]]
+[[is:1665]]
+[[it:1665]]
+[[ja:1665年]]
+[[jv:1665]]
+[[ka:1665]]
+[[ko:1665년]]
+[[ksh:Joohr 1665]]
+[[la:1665]]
+[[lb:1665]]
+[[lmo:1665]]
+[[lt:XVII amžiaus 7-as dešimtmetis#1665]]
+[[map-bms:1665]]
+[[mi:1665]]
+[[mk:1665]]
+[[mr:इ.स. १६६५]]
+[[ms:1665]]
+[[nah:1665]]
+[[nap:1665]]
+[[new:१६६५]]
+[[nl:1665]]
+[[nn:1665]]
+[[no:1665]]
+[[nov:1665]]
+[[nrm:1665]]
+[[oc:1665]]
+[[os:1665]]
+[[pi:१६६५]]
+[[pl:1665]]
+[[pt:1665]]
+[[ro:1665]]
+[[ru:1665 год]]
+[[sa:१६६५]]
+[[scn:1665]]
+[[sk:1665]]
+[[sl:1665]]
+[[sq:1665]]
+[[sr:1665]]
+[[su:1665]]
+[[sv:1665]]
+[[sw:1665]]
+[[th:พ.ศ. 2208]]
+[[tl:1665]]
+[[tr:1665]]
+[[tt:1665]]
+[[uk:1665]]
+[[uz:1665]]
+[[vec:1665]]
+[[zh:1665年]]
+[[zh-yue:1665年]]
