--- a/Zwevezêle.mw
+++ b/Zwevezêle.mw
@@ -33,7 +33,7 @@ In de joarn tsjestig van de verleen êeuw stound er een motofabrieke in Zwevezê
 Ter woarn ôok twee brouweryen in de Lichterveldestroate. Ze brouwden bier en mohtegen limonoade. Eén van die brouweryen, Callewaert, was zynen tyd verre voruut. Ulder limonoademerk, 'White Star' oad ten latste van achter den Twède Weireldoorlog nen Ingelsen noame (in plekke van ne Fransen dat ton mode was). Moar: ze oan niet allêne witte, gele en roo (grenadine) moar ôok lichtgroene limonoade! Eeuwige roem!
 
 =='t citoat==
-Raymound van het Groenewoud moakte Zwevezêle onsterfelik in Vloandern in zyn liedje: "Je veux de l'amour" - 
+Raymond van het Groenewoud moakte Zwevezêle onsterfelik in Vloandern in zyn liedje: "Je veux de l'amour" - 
 "'k Heb gezongen in Aalst, Peutie, Zwevezele, Genoelselderen"
 
 ==Boek==
