--- a/1679.mw
+++ b/1679.mw
@@ -5,3 +5,95 @@
 *[[17 september|17]] - [[Juan II van Oostnryk]]
 
 [[Categorie: 1670-1679]]
+
+[[af:1679]]
+[[am:1679 እ.ኤ.አ.]]
+[[an:1679]]
+[[ar:1679]]
+[[ast:1679]]
+[[az:1679]]
+[[be:1679]]
+[[be-x-old:1679]]
+[[bg:1679]]
+[[bh:१६७९]]
+[[bn:১৬৭৯]]
+[[bpy:মারি ১৬৭৯]]
+[[br:1679]]
+[[bs:1679]]
+[[ca:1679]]
+[[co:1679]]
+[[cs:1679]]
+[[cv:1679]]
+[[cy:1679]]
+[[da:1679]]
+[[de:1679]]
+[[el:1679]]
+[[en:1679]]
+[[eo:1679]]
+[[es:1679]]
+[[et:1679]]
+[[eu:1679]]
+[[fi:1679]]
+[[fr:1679]]
+[[ga:1679]]
+[[gd:1679]]
+[[gl:1679]]
+[[he:1679]]
+[[hi:1679]]
+[[hr:1679.]]
+[[ht:1679 (almanak gregoryen)]]
+[[hu:1679]]
+[[hy:1679]]
+[[ia:1679]]
+[[id:1679]]
+[[io:1679]]
+[[is:1679]]
+[[it:1679]]
+[[ja:1679年]]
+[[jv:1679]]
+[[ka:1679]]
+[[ko:1679년]]
+[[ksh:Joohr 1679]]
+[[la:1679]]
+[[lb:1679]]
+[[lmo:1679]]
+[[lt:XVII amžiaus 8-as dešimtmetis#1679]]
+[[map-bms:1679]]
+[[mi:1679]]
+[[mk:1679]]
+[[mr:इ.स. १६७९]]
+[[ms:1679]]
+[[nah:1679]]
+[[nap:1679]]
+[[new:१६७९]]
+[[nl:1679]]
+[[nn:1679]]
+[[no:1679]]
+[[nov:1679]]
+[[nrm:1679]]
+[[oc:1679]]
+[[os:1679]]
+[[pi:१६७९]]
+[[pl:1679]]
+[[pt:1679]]
+[[ro:1679]]
+[[ru:1679 год]]
+[[sa:१६७९]]
+[[scn:1679]]
+[[simple:1679]]
+[[sk:1679]]
+[[sl:1679]]
+[[sq:1679]]
+[[sr:1679]]
+[[su:1679]]
+[[sv:1679]]
+[[sw:1679]]
+[[th:พ.ศ. 2222]]
+[[tl:1679]]
+[[tr:1679]]
+[[uk:1679]]
+[[uz:1679]]
+[[vec:1679]]
+[[wa:1679]]
+[[zh:1679年]]
+[[zh-yue:1679年]]
