--- a/1714.mw
+++ b/1714.mw
@@ -2,3 +2,98 @@
 *[[Ferdinand Rodenbach]]
 
 [[Categorie: 1710-1719]]
+
+[[af:1714]]
+[[am:1714 እ.ኤ.አ.]]
+[[an:1714]]
+[[ar:1714]]
+[[ast:1714]]
+[[az:1714]]
+[[be:1714]]
+[[be-x-old:1714]]
+[[bg:1714]]
+[[bh:१७१४]]
+[[bn:১৭১৪]]
+[[bpy:মারি ১৭১৪]]
+[[br:1714]]
+[[bs:1714]]
+[[ca:1714]]
+[[co:1714]]
+[[cs:1714]]
+[[csb:1714]]
+[[cv:1714]]
+[[cy:1714]]
+[[da:1714]]
+[[de:1714]]
+[[el:1714]]
+[[en:1714]]
+[[eo:1714]]
+[[es:1714]]
+[[et:1714]]
+[[eu:1714]]
+[[fi:1714]]
+[[fr:1714]]
+[[fy:1714]]
+[[ga:1714]]
+[[gd:1714]]
+[[gl:1714]]
+[[he:1714]]
+[[hi:1714]]
+[[hr:1714.]]
+[[ht:1714 (almanak gregoryen)]]
+[[hu:1714]]
+[[hy:1714]]
+[[ia:1714]]
+[[id:1714]]
+[[io:1714]]
+[[is:1714]]
+[[it:1714]]
+[[ja:1714年]]
+[[jv:1714]]
+[[ka:1714]]
+[[ko:1714년]]
+[[ksh:Joohr 1714]]
+[[la:1714]]
+[[lb:1714]]
+[[lmo:1714]]
+[[lt:1714]]
+[[map-bms:1714]]
+[[mi:1714]]
+[[mk:1714]]
+[[mr:इ.स. १७१४]]
+[[ms:1714]]
+[[nah:1714]]
+[[nap:1714]]
+[[nds:1714]]
+[[new:१७१४]]
+[[nl:1714]]
+[[nn:1714]]
+[[no:1714]]
+[[nov:1714]]
+[[nrm:1714]]
+[[oc:1714]]
+[[os:1714]]
+[[pi:१७१४]]
+[[pl:1714]]
+[[pt:1714]]
+[[ro:1714]]
+[[ru:1714 год]]
+[[sa:१७१४]]
+[[scn:1714]]
+[[simple:1714]]
+[[sk:1714]]
+[[sl:1714]]
+[[sq:1714]]
+[[sr:1714]]
+[[su:1714]]
+[[sv:1714]]
+[[sw:1714]]
+[[th:พ.ศ. 2257]]
+[[tl:1714]]
+[[tr:1714]]
+[[tt:1714]]
+[[uk:1714]]
+[[uz:1714]]
+[[vec:1714]]
+[[zh:1714年]]
+[[zh-yue:1714年]]
