--- a/1715.mw
+++ b/1715.mw
@@ -3,3 +3,98 @@
 *[[1 september|1]] - [[Lodewyk XIV]]
 
 [[Categorie: 1710-1719]]
+
+[[af:1715]]
+[[am:1715 እ.ኤ.አ.]]
+[[an:1715]]
+[[ar:1715]]
+[[ast:1715]]
+[[az:1715]]
+[[be:1715]]
+[[be-x-old:1715]]
+[[bg:1715]]
+[[bh:१७१५]]
+[[bn:১৭১৫]]
+[[bpy:মারি ১৭১৫]]
+[[br:1715]]
+[[bs:1715]]
+[[ca:1715]]
+[[co:1715]]
+[[cs:1715]]
+[[csb:1715]]
+[[cv:1715]]
+[[cy:1715]]
+[[da:1715]]
+[[de:1715]]
+[[el:1715]]
+[[en:1715]]
+[[eo:1715]]
+[[es:1715]]
+[[et:1715]]
+[[eu:1715]]
+[[fa:۱۷۱۵ (میلادی)]]
+[[fi:1715]]
+[[fr:1715]]
+[[ga:1715]]
+[[gd:1715]]
+[[gl:1715]]
+[[he:1715]]
+[[hi:1715]]
+[[hr:1715.]]
+[[ht:1715 (almanak gregoryen)]]
+[[hu:1715]]
+[[hy:1715]]
+[[ia:1715]]
+[[id:1715]]
+[[io:1715]]
+[[is:1715]]
+[[it:1715]]
+[[ja:1715年]]
+[[jv:1715]]
+[[ka:1715]]
+[[ko:1715년]]
+[[ksh:Joohr 1715]]
+[[la:1715]]
+[[lb:1715]]
+[[lmo:1715]]
+[[lt:1715]]
+[[map-bms:1715]]
+[[mi:1715]]
+[[mk:1715]]
+[[mr:इ.स. १७१५]]
+[[ms:1715]]
+[[nah:1715]]
+[[nap:1715]]
+[[nds:1715]]
+[[new:१७१५]]
+[[nl:1715]]
+[[nn:1715]]
+[[no:1715]]
+[[nov:1715]]
+[[nrm:1715]]
+[[oc:1715]]
+[[os:1715]]
+[[pi:१७१५]]
+[[pl:1715]]
+[[pt:1715]]
+[[ro:1715]]
+[[ru:1715 год]]
+[[sa:१७१५]]
+[[scn:1715]]
+[[simple:1715]]
+[[sk:1715]]
+[[sl:1715]]
+[[sq:1715]]
+[[sr:1715]]
+[[su:1715]]
+[[sv:1715]]
+[[sw:1715]]
+[[th:พ.ศ. 2258]]
+[[tl:1715]]
+[[tr:1715]]
+[[tt:1715]]
+[[uk:1715]]
+[[uz:1715]]
+[[vec:1715]]
+[[zh:1715年]]
+[[zh-yue:1715年]]
