--- a/1758.mw
+++ b/1758.mw
@@ -2,3 +2,98 @@
 *[[Carolus Linnaeus]] publiceert 't êeste dêel (''Animalia'') van de 10ste uutgoave van z'n ''Systema Naturae'', 't begun van de moderne zoölogische noamgevinge.
 
 [[Categorie: 1750-1759]]
+
+[[af:1758]]
+[[am:1758 እ.ኤ.አ.]]
+[[an:1758]]
+[[ar:1758]]
+[[ast:1758]]
+[[az:1758]]
+[[be:1758]]
+[[be-x-old:1758]]
+[[bg:1758]]
+[[bh:१७५८]]
+[[bn:১৭৫৮]]
+[[bpy:মারি ১৭৫৮]]
+[[br:1758]]
+[[bs:1758]]
+[[ca:1758]]
+[[co:1758]]
+[[cs:1758]]
+[[csb:1758]]
+[[cv:1758]]
+[[cy:1758]]
+[[da:1758]]
+[[de:1758]]
+[[el:1758]]
+[[en:1758]]
+[[eo:1758]]
+[[es:1758]]
+[[et:1758]]
+[[eu:1758]]
+[[fi:1758]]
+[[fr:1758]]
+[[fy:1758]]
+[[ga:1758]]
+[[gd:1758]]
+[[gl:1758]]
+[[he:1758]]
+[[hi:1758]]
+[[hr:1758.]]
+[[ht:1758 (almanak gregoryen)]]
+[[hu:1758]]
+[[hy:1758]]
+[[ia:1758]]
+[[id:1758]]
+[[io:1758]]
+[[is:1758]]
+[[it:1758]]
+[[ja:1758年]]
+[[jv:1758]]
+[[ka:1758]]
+[[ko:1758년]]
+[[ksh:Joohr 1758]]
+[[la:1758]]
+[[lb:1758]]
+[[lmo:1758]]
+[[lt:1758]]
+[[map-bms:1758]]
+[[mi:1758]]
+[[mk:1758]]
+[[mr:इ.स. १७५८]]
+[[ms:1758]]
+[[nah:1758]]
+[[nap:1758]]
+[[new:१७५८]]
+[[nl:1758]]
+[[nn:1758]]
+[[no:1758]]
+[[nov:1758]]
+[[nrm:1758]]
+[[oc:1758]]
+[[os:1758]]
+[[pi:१७५८]]
+[[pl:1758]]
+[[pt:1758]]
+[[ro:1758]]
+[[ru:1758 год]]
+[[sa:१७५८]]
+[[scn:1758]]
+[[simple:1758]]
+[[sk:1758]]
+[[sl:1758]]
+[[sq:1758]]
+[[sr:1758]]
+[[su:1758]]
+[[sv:1758]]
+[[sw:1758]]
+[[th:พ.ศ. 2301]]
+[[tl:1758]]
+[[tr:1758]]
+[[tt:1758]]
+[[uk:1758]]
+[[uz:1758]]
+[[vec:1758]]
+[[wa:1758]]
+[[zh:1758年]]
+[[zh-yue:1758年]]
