--- a/1783.mw
+++ b/1783.mw
@@ -2,3 +2,98 @@
 *[[Ferdinand Rodenbach]]
 
 [[Categorie: 1780-1789]]
+
+[[af:1783]]
+[[am:1783 እ.ኤ.አ.]]
+[[an:1783]]
+[[ar:1783]]
+[[ast:1783]]
+[[az:1783]]
+[[be:1783]]
+[[be-x-old:1783]]
+[[bg:1783]]
+[[bh:१७८३]]
+[[bn:১৭৮৩]]
+[[bpy:মারি ১৭৮৩]]
+[[br:1783]]
+[[bs:1783]]
+[[ca:1783]]
+[[co:1783]]
+[[cs:1783]]
+[[csb:1783]]
+[[cv:1783]]
+[[cy:1783]]
+[[da:1783]]
+[[de:1783]]
+[[el:1783]]
+[[en:1783]]
+[[eo:1783]]
+[[es:1783]]
+[[et:1783]]
+[[eu:1783]]
+[[fi:1783]]
+[[fr:1783]]
+[[fy:1783]]
+[[ga:1783]]
+[[gd:1783]]
+[[gl:1783]]
+[[he:1783]]
+[[hi:1783]]
+[[hr:1783.]]
+[[ht:1783 (almanak gregoryen)]]
+[[hu:1783]]
+[[hy:1783]]
+[[ia:1783]]
+[[id:1783]]
+[[io:1783]]
+[[is:1783]]
+[[it:1783]]
+[[ja:1783年]]
+[[jv:1783]]
+[[ka:1783]]
+[[ko:1783년]]
+[[ksh:Joohr 1783]]
+[[la:1783]]
+[[lb:1783]]
+[[lmo:1783]]
+[[lt:1783]]
+[[map-bms:1783]]
+[[mi:1783]]
+[[mk:1783]]
+[[mr:इ.स. १७८३]]
+[[ms:1783]]
+[[nah:1783]]
+[[nap:1783]]
+[[new:१७८३]]
+[[nl:1783]]
+[[nn:1783]]
+[[no:1783]]
+[[nov:1783]]
+[[nrm:1783]]
+[[oc:1783]]
+[[os:1783]]
+[[pi:१७८३]]
+[[pl:1783]]
+[[pt:1783]]
+[[ro:1783]]
+[[ru:1783 год]]
+[[sa:१७८३]]
+[[scn:1783]]
+[[simple:1783]]
+[[sk:1783]]
+[[sl:1783]]
+[[sq:1783]]
+[[sr:1783]]
+[[su:1783]]
+[[sv:1783]]
+[[sw:1783]]
+[[th:พ.ศ. 2326]]
+[[tl:1783]]
+[[tr:1783]]
+[[tt:1783]]
+[[uk:1783]]
+[[uz:1783]]
+[[vec:1783]]
+[[wa:1783]]
+[[zh:1783年]]
+[[zh-yue:1783年]]
