--- a/1805.mw
+++ b/1805.mw
@@ -3,3 +3,103 @@
 *[[19 april|19]] - [[Edmond de Coussemaker]]
 
 [[Categorie: 1800-1809]]
+
+[[af:1805]]
+[[am:1805 እ.ኤ.አ.]]
+[[an:1805]]
+[[ar:1805]]
+[[ast:1805]]
+[[av:1805]]
+[[az:1805]]
+[[bat-smg:1805]]
+[[be:1805]]
+[[be-x-old:1805]]
+[[bg:1805]]
+[[bh:१८०५]]
+[[bn:১৮০৫]]
+[[bpy:মারি ১৮০৫]]
+[[br:1805]]
+[[bs:1805]]
+[[ca:1805]]
+[[co:1805]]
+[[cs:1805]]
+[[csb:1805]]
+[[cv:1805]]
+[[cy:1805]]
+[[da:1805]]
+[[de:1805]]
+[[el:1805]]
+[[en:1805]]
+[[eo:1805]]
+[[es:1805]]
+[[et:1805]]
+[[eu:1805]]
+[[fi:1805]]
+[[fr:1805]]
+[[fy:1805]]
+[[ga:1805]]
+[[gd:1805]]
+[[gl:1805]]
+[[he:1805]]
+[[hi:1805]]
+[[hr:1805.]]
+[[ht:1805 (almanak gregoryen)]]
+[[hu:1805]]
+[[hy:1805]]
+[[ia:1805]]
+[[id:1805]]
+[[io:1805]]
+[[is:1805]]
+[[it:1805]]
+[[ja:1805年]]
+[[jv:1805]]
+[[ka:1805]]
+[[ko:1805년]]
+[[ksh:Joohr 1805]]
+[[la:1805]]
+[[lb:1805]]
+[[lmo:1805]]
+[[lt:1805]]
+[[map-bms:1805]]
+[[mi:1805]]
+[[mk:1805]]
+[[mr:इ.स. १८०५]]
+[[ms:1805]]
+[[nah:1805]]
+[[nap:1805]]
+[[nds:1805]]
+[[new:ई सं १८०५]]
+[[nl:1805]]
+[[nn:1805]]
+[[no:1805]]
+[[nov:1805]]
+[[nrm:1805]]
+[[oc:1805]]
+[[os:1805]]
+[[pi:१८०५]]
+[[pl:1805]]
+[[pt:1805]]
+[[ro:1805]]
+[[ru:1805 год]]
+[[sa:१८०५]]
+[[scn:1805]]
+[[sh:1805]]
+[[simple:1805]]
+[[sk:1805]]
+[[sl:1805]]
+[[sq:1805]]
+[[sr:1805]]
+[[su:1805]]
+[[sv:1805]]
+[[sw:1805]]
+[[te:1805]]
+[[th:พ.ศ. 2348]]
+[[tl:1805]]
+[[tr:1805]]
+[[tt:1805]]
+[[uk:1805]]
+[[uz:1805]]
+[[vec:1805]]
+[[wa:1805]]
+[[zh:1805年]]
+[[zh-yue:1805年]]
