--- a/1819.mw
+++ b/1819.mw
@@ -3,3 +3,105 @@
 *[[20 juni|20]] - [[Jacques Offenbach]]
 
 [[Categorie: 1810-1819]]
+
+[[af:1819]]
+[[am:1819 እ.ኤ.አ.]]
+[[an:1819]]
+[[ar:1819]]
+[[ast:1819]]
+[[az:1819]]
+[[bat-smg:1819]]
+[[be:1819]]
+[[be-x-old:1819]]
+[[bg:1819]]
+[[bh:१८१९]]
+[[bn:১৮১৯]]
+[[bpy:মারি ১৮১৯]]
+[[br:1819]]
+[[bs:1819]]
+[[ca:1819]]
+[[co:1819]]
+[[cs:1819]]
+[[csb:1819]]
+[[cv:1819]]
+[[cy:1819]]
+[[da:1819]]
+[[de:1819]]
+[[el:1819]]
+[[en:1819]]
+[[eo:1819]]
+[[es:1819]]
+[[et:1819]]
+[[eu:1819]]
+[[fi:1819]]
+[[fr:1819]]
+[[fy:1819]]
+[[ga:1819]]
+[[gd:1819]]
+[[gl:1819]]
+[[he:1819]]
+[[hi:1819]]
+[[hr:1819.]]
+[[ht:1819 (almanak gregoryen)]]
+[[hu:1819]]
+[[hy:1819]]
+[[ia:1819]]
+[[id:1819]]
+[[io:1819]]
+[[is:1819]]
+[[it:1819]]
+[[ja:1819年]]
+[[jv:1819]]
+[[ka:1819]]
+[[ko:1819년]]
+[[ksh:Joohr 1819]]
+[[la:1819]]
+[[lb:1819]]
+[[lij:1819]]
+[[lmo:1819]]
+[[lt:1819]]
+[[map-bms:1819]]
+[[mi:1819]]
+[[mk:1819]]
+[[mr:इ.स. १८१९]]
+[[ms:1819]]
+[[nah:1819]]
+[[nap:1819]]
+[[nds:1819]]
+[[new:ई सं १८१९]]
+[[nl:1819]]
+[[nn:1819]]
+[[no:1819]]
+[[nov:1819]]
+[[nrm:1819]]
+[[oc:1819]]
+[[os:1819]]
+[[pi:१८१९]]
+[[pl:1819]]
+[[pt:1819]]
+[[ro:1819]]
+[[ru:1819 год]]
+[[sa:१८१९]]
+[[scn:1819]]
+[[se:1819]]
+[[simple:1819]]
+[[sk:1819]]
+[[sl:1819]]
+[[sq:1819]]
+[[sr:1819]]
+[[su:1819]]
+[[sv:1819]]
+[[sw:1819]]
+[[ta:1819]]
+[[te:1819]]
+[[tg:1819]]
+[[th:พ.ศ. 2362]]
+[[tl:1819]]
+[[tr:1819]]
+[[tt:1819]]
+[[uk:1819]]
+[[uz:1819]]
+[[vec:1819]]
+[[wa:1819]]
+[[zh:1819年]]
+[[zh-yue:1819年]]
