*Empty MediaWiki Message*

--- a/1951.mw
+++ b/1951.mw
@@ -7,6 +7,7 @@
 *[[6 juli|6]] - [[Geert Bourgeois]]
 
 ;november
+*[[10 november|10]] - [[Johan Vermeersch]]
 *[[19 november|19]] - [[Michiel Hendryckx]]
 
 ;december
