--- a/1865.mw
+++ b/1865.mw
@@ -3,3 +3,106 @@
 *[[30 december|30]] - [[Rudyard Kipling]]
 
 [[Categorie: 1860-1869]]
+
+[[af:1865]]
+[[am:1865 እ.ኤ.አ.]]
+[[an:1865]]
+[[ar:1865]]
+[[ast:1865]]
+[[az:1865]]
+[[bat-smg:1865]]
+[[be:1865]]
+[[be-x-old:1865]]
+[[bg:1865]]
+[[bh:१८६५]]
+[[bn:১৮৬৫]]
+[[bpy:মারি ১৮৬৫]]
+[[br:1865]]
+[[bs:1865]]
+[[ca:1865]]
+[[cbk-zam:1865]]
+[[co:1865]]
+[[cs:1865]]
+[[csb:1865]]
+[[cv:1865]]
+[[cy:1865]]
+[[da:1865]]
+[[de:1865]]
+[[el:1865]]
+[[en:1865]]
+[[eo:1865]]
+[[es:1865]]
+[[et:1865]]
+[[eu:1865]]
+[[fi:1865]]
+[[fo:1865]]
+[[fr:1865]]
+[[fur:1865]]
+[[fy:1865]]
+[[ga:1865]]
+[[gd:1865]]
+[[gl:1865]]
+[[he:1865]]
+[[hi:1865]]
+[[hr:1865.]]
+[[ht:1865 (almanak gregoryen)]]
+[[hu:1865]]
+[[hy:1865]]
+[[ia:1865]]
+[[id:1865]]
+[[io:1865]]
+[[is:1865]]
+[[it:1865]]
+[[ja:1865年]]
+[[jv:1865]]
+[[ka:1865]]
+[[ko:1865년]]
+[[ksh:Joohr 1865]]
+[[la:1865]]
+[[lb:1865]]
+[[lmo:1865]]
+[[lt:1865]]
+[[map-bms:1865]]
+[[mi:1865]]
+[[mk:1865]]
+[[mr:इ.स. १८६५]]
+[[ms:1865]]
+[[nah:1865]]
+[[nap:1865]]
+[[nds:1865]]
+[[new:ई सं १८६५]]
+[[nl:1865]]
+[[nn:1865]]
+[[no:1865]]
+[[nov:1865]]
+[[nrm:1865]]
+[[oc:1865]]
+[[os:1865]]
+[[pi:१८६५]]
+[[pl:1865]]
+[[pt:1865]]
+[[ro:1865]]
+[[ru:1865 год]]
+[[scn:1865]]
+[[se:1865]]
+[[sh:1865]]
+[[simple:1865]]
+[[sk:1865]]
+[[sl:1865]]
+[[sq:1865]]
+[[sr:1865]]
+[[su:1865]]
+[[sv:1865]]
+[[sw:1865]]
+[[ta:1865]]
+[[te:1865]]
+[[th:พ.ศ. 2408]]
+[[tl:1865]]
+[[tr:1865]]
+[[tt:1865]]
+[[uk:1865]]
+[[uz:1865]]
+[[vec:1865]]
+[[wa:1865]]
+[[zh:1865年]]
+[[zh-yue:1865年]]
