--- a/1604.mw
+++ b/1604.mw
@@ -10,3 +10,88 @@
 [[ar:1604]]
 [[ast:1604]]
 [[az:1604]]
+[[be:1604]]
+[[be-x-old:1604]]
+[[bg:1604]]
+[[bh:१६०४]]
+[[bn:১৬০৪]]
+[[bpy:মারি ১৬০৪]]
+[[br:1604]]
+[[bs:1604]]
+[[ca:1604]]
+[[co:1604]]
+[[cs:1604]]
+[[cv:1604]]
+[[cy:1604]]
+[[da:1604]]
+[[de:1604]]
+[[el:1604]]
+[[en:1604]]
+[[eo:1604]]
+[[es:1604]]
+[[et:1604]]
+[[eu:1604]]
+[[fi:1604]]
+[[fr:1604]]
+[[ga:1604]]
+[[gd:1604]]
+[[gl:1604]]
+[[he:1604]]
+[[hi:1604]]
+[[hr:1604.]]
+[[ht:1604 (almanak gregoryen)]]
+[[hu:1604]]
+[[hy:1604]]
+[[ia:1604]]
+[[id:1604]]
+[[io:1604]]
+[[is:1604]]
+[[it:1604]]
+[[ja:1604年]]
+[[jv:1604]]
+[[ka:1604]]
+[[ko:1604년]]
+[[ksh:Joohr 1604]]
+[[la:1604]]
+[[lb:1604]]
+[[lij:1604]]
+[[lt:XVII amžiaus 1-as dešimtmetis#1604]]
+[[map-bms:1604]]
+[[mi:1604]]
+[[mk:1604]]
+[[mr:इ.स. १६०४]]
+[[ms:1604]]
+[[nah:1604]]
+[[nap:1604]]
+[[nds:1604]]
+[[new:१६०४]]
+[[nl:1604]]
+[[nn:1604]]
+[[no:1604]]
+[[nov:1604]]
+[[nrm:1604]]
+[[oc:1604]]
+[[os:1604]]
+[[pi:१६०४]]
+[[pl:1604]]
+[[pt:1604]]
+[[ro:1604]]
+[[ru:1604 год]]
+[[sa:१६०४]]
+[[scn:1604]]
+[[simple:1604]]
+[[sk:1604]]
+[[sl:1604]]
+[[sq:1604]]
+[[sr:1604]]
+[[su:1604]]
+[[sv:1604]]
+[[sw:1604]]
+[[th:พ.ศ. 2147]]
+[[tl:1604]]
+[[tr:1604]]
+[[uk:1604]]
+[[uz:1604]]
+[[vec:1604]]
+[[zh:1604年]]
+[[zh-yue:1604年]]
