--- a/1700.mw
+++ b/1700.mw
@@ -9,3 +9,94 @@
 [[an:1700]]
 [[ar:1700]]
 [[ast:1700]]
+[[az:1700]]
+[[be:1700]]
+[[be-x-old:1700]]
+[[bg:1700]]
+[[bh:१७००]]
+[[bn:১৭০০]]
+[[bpy:মারি ১৭০০]]
+[[br:1700]]
+[[bs:1700]]
+[[ca:1700]]
+[[co:1700]]
+[[cs:1700]]
+[[csb:1700]]
+[[cv:1700]]
+[[cy:1700]]
+[[da:1700]]
+[[de:1700]]
+[[el:1700]]
+[[en:1700]]
+[[eo:1700]]
+[[es:1700]]
+[[et:1700]]
+[[eu:1700]]
+[[fi:1700]]
+[[fr:1700]]
+[[fy:1700]]
+[[ga:1700]]
+[[gd:1700]]
+[[gl:1700]]
+[[he:1700]]
+[[hi:1700]]
+[[hr:1700.]]
+[[ht:1700 (almanak gregoryen)]]
+[[hu:1700]]
+[[hy:1700]]
+[[ia:1700]]
+[[id:1700]]
+[[ilo:1700]]
+[[io:1700]]
+[[is:1700]]
+[[it:1700]]
+[[ja:1700年]]
+[[jv:1700]]
+[[ka:1700]]
+[[ko:1700년]]
+[[ksh:Joohr 1700]]
+[[la:1700]]
+[[lb:1700]]
+[[lmo:1700]]
+[[lt:XVII amžiaus 10-as dešimtmetis#1700]]
+[[map-bms:1700]]
+[[mi:1700]]
+[[mk:1700]]
+[[mr:इ.स. १७००]]
+[[ms:1700]]
+[[nah:1700]]
+[[nap:1700]]
+[[nds:1700]]
+[[new:१७००]]
+[[nl:1700]]
+[[nn:1700]]
+[[no:1700]]
+[[nov:1700]]
+[[nrm:1700]]
+[[oc:1700]]
+[[os:1700]]
+[[pi:१७००]]
+[[pl:1700]]
+[[pt:1700]]
+[[ro:1700]]
+[[ru:1700 год]]
+[[sa:१७००]]
+[[scn:1700]]
+[[simple:1700]]
+[[sk:1700]]
+[[sl:1700]]
+[[sq:1700]]
+[[sr:1700]]
+[[su:1700]]
+[[sv:1700]]
+[[sw:1700]]
+[[th:พ.ศ. 2243]]
+[[tl:1700]]
+[[tr:1700]]
+[[tt:1700]]
+[[uk:1700]]
+[[uz:1700]]
+[[vec:1700]]
+[[wa:1700]]
+[[zh:1700年]]
+[[zh-yue:1700年]]
