--- a/1890.mw
+++ b/1890.mw
@@ -9,3 +9,107 @@
 [[an:1890]]
 [[ar:1890]]
 [[ast:1890]]
+[[az:1890]]
+[[bat-smg:1890]]
+[[be:1890]]
+[[be-x-old:1890]]
+[[bg:1890]]
+[[bh:१८९०]]
+[[bn:১৮৯০]]
+[[bpy:মারি ১৮৯০]]
+[[br:1890]]
+[[bs:1890]]
+[[ca:1890]]
+[[cbk-zam:1890]]
+[[co:1890]]
+[[cs:1890]]
+[[csb:1890]]
+[[cv:1890]]
+[[cy:1890]]
+[[da:1890]]
+[[de:1890]]
+[[el:1890]]
+[[en:1890]]
+[[eo:1890]]
+[[es:1890]]
+[[et:1890]]
+[[eu:1890]]
+[[fa:۱۸۹۰ (میلادی)]]
+[[fi:1890]]
+[[fo:1890]]
+[[fr:1890]]
+[[fur:1890]]
+[[fy:1890]]
+[[ga:1890]]
+[[gd:1890]]
+[[gl:1890]]
+[[gn:1890]]
+[[he:1890]]
+[[hi:1890]]
+[[hr:1890.]]
+[[ht:1890 (almanak gregoryen)]]
+[[hu:1890]]
+[[hy:1890]]
+[[ia:1890]]
+[[id:1890]]
+[[ilo:1890]]
+[[io:1890]]
+[[is:1890]]
+[[it:1890]]
+[[ja:1890年]]
+[[jv:1890]]
+[[ka:1890]]
+[[kn:೧೮೯೦]]
+[[ko:1890년]]
+[[ksh:Joohr 1890]]
+[[ku:1890]]
+[[la:1890]]
+[[lb:1890]]
+[[lij:1890]]
+[[lmo:1890]]
+[[lt:1890]]
+[[map-bms:1890]]
+[[mi:1890]]
+[[mk:1890]]
+[[mr:इ.स. १८९०]]
+[[ms:1890]]
+[[nah:1890]]
+[[nap:1890]]
+[[nds:1890]]
+[[new:ई सं १८९०]]
+[[nl:1890]]
+[[nn:1890]]
+[[no:1890]]
+[[nov:1890]]
+[[nrm:1890]]
+[[oc:1890]]
+[[os:1890]]
+[[pi:१८९०]]
+[[pl:1890]]
+[[pt:1890]]
+[[ro:1890]]
+[[ru:1890 год]]
+[[scn:1890]]
+[[se:1890]]
+[[sh:1890]]
+[[simple:1890]]
+[[sk:1890]]
+[[sl:1890]]
+[[sq:1890]]
+[[sr:1890]]
+[[su:1890]]
+[[sv:1890]]
+[[sw:1890]]
+[[ta:1890]]
+[[te:1890]]
+[[tet:1890]]
+[[th:พ.ศ. 2433]]
+[[tl:1890]]
+[[tr:1890]]
+[[tt:1890]]
+[[uk:1890]]
+[[uz:1890]]
+[[vec:1890]]
+[[wa:1890]]
+[[zh:1890年]]
+[[zh-yue:1890年]]
