--- a/1517.mw
+++ b/1517.mw
@@ -8,3 +8,91 @@
 [[am:1517 እ.ኤ.አ.]]
 [[an:1517]]
 [[ar:1517]]
+[[ast:1517]]
+[[az:1517]]
+[[be:1517]]
+[[be-x-old:1517]]
+[[bg:1517]]
+[[bh:१५१७]]
+[[bn:১৫১৭]]
+[[bpy:মারি ১৫১৭]]
+[[br:1517]]
+[[bs:1517]]
+[[ca:1517]]
+[[co:1517]]
+[[cs:1517]]
+[[cv:1517]]
+[[cy:1517]]
+[[da:1517]]
+[[de:1517]]
+[[el:1517]]
+[[en:1517]]
+[[eo:1517]]
+[[es:1517]]
+[[et:1517]]
+[[eu:1517]]
+[[fi:1517]]
+[[fr:1517]]
+[[fy:1517]]
+[[ga:1517]]
+[[gd:1517]]
+[[gl:1517]]
+[[he:1517]]
+[[hi:1517]]
+[[hr:1517.]]
+[[ht:1517 (almanak jilyen)]]
+[[hu:1517]]
+[[hy:1517]]
+[[ia:1517]]
+[[id:1517]]
+[[io:1517]]
+[[is:1517]]
+[[it:1517]]
+[[ja:1517年]]
+[[jv:1517]]
+[[ka:1517]]
+[[ko:1517년]]
+[[ksh:Joohr 1517]]
+[[la:1517]]
+[[lb:1517]]
+[[lt:XVI amžiaus 2-as dešimtmetis#1517]]
+[[map-bms:1517]]
+[[mi:1517]]
+[[mk:1517]]
+[[mr:इ.स. १५१७]]
+[[ms:1517]]
+[[nah:1517]]
+[[nap:1517]]
+[[nds:1517]]
+[[new:१५१७]]
+[[nl:1517]]
+[[nn:1517]]
+[[no:1517]]
+[[nov:1517]]
+[[nrm:1517]]
+[[oc:1517]]
+[[os:1517]]
+[[pi:१५१७]]
+[[pl:1517]]
+[[pt:1517]]
+[[ro:1517]]
+[[ru:1517 год]]
+[[sa:१५१७]]
+[[scn:1517]]
+[[simple:1517]]
+[[sk:1517]]
+[[sl:1517]]
+[[sq:1517]]
+[[sr:1517]]
+[[su:1517]]
+[[sv:1517]]
+[[sw:1517]]
+[[th:พ.ศ. 2060]]
+[[tl:1517]]
+[[tr:1517]]
+[[tt:1517]]
+[[uk:1517]]
+[[uz:1517]]
+[[vec:1517]]
+[[zh:1517年]]
+[[zh-yue:1517年]]
