--- a/1382.mw
+++ b/1382.mw
@@ -4,5 +4,95 @@
 
 [[Categorie:1380-1389]]
 
-[[nl:1382]]
+[[af:1382]]
+[[am:1382 እ.ኤ.አ.]]
+[[an:1382]]
+[[ar:1382]]
+[[ast:1382]]
+[[az:1382]]
+[[bat-smg:1382]]
+[[be:1382]]
+[[be-x-old:1382]]
+[[bg:1382]]
+[[bh:१३८२]]
+[[bn:১৩৮২]]
+[[bpy:মারি ১৩৮২]]
+[[br:1382]]
+[[bs:1382]]
+[[ca:1382]]
+[[co:1382]]
+[[cs:1382]]
+[[csb:1382]]
+[[cv:1382]]
+[[cy:1382]]
+[[da:1382]]
+[[de:1382]]
+[[el:1382]]
 [[en:1382]]
+[[eo:1382]]
+[[es:1382]]
+[[et:1382]]
+[[eu:1382]]
+[[fi:1382]]
+[[fr:1382]]
+[[fur:1382]]
+[[fy:1382]]
+[[gd:1382]]
+[[gl:1382]]
+[[he:1382]]
+[[hi:1382]]
+[[hr:1382.]]
+[[ht:1382 (almanak jilyen)]]
+[[hu:1382]]
+[[hy:1382]]
+[[id:1382]]
+[[io:1382]]
+[[is:1382]]
+[[it:1382]]
+[[ja:1382年]]
+[[jv:1382]]
+[[ka:1382]]
+[[ko:1382년]]
+[[ksh:Joohr 1382]]
+[[la:1382]]
+[[lb:1382]]
+[[lt:XIV amžiaus 9-as dešimtmetis#1382]]
+[[map-bms:1382]]
+[[mi:1382]]
+[[mk:1382]]
+[[mr:इ.स. १३८२]]
+[[ms:1382]]
+[[nah:1382]]
+[[nap:1382]]
+[[nds-nl:1382]]
+[[new:१३८२]]
+[[nl:1382]]
+[[nn:1382]]
+[[no:1382]]
+[[nrm:1382]]
+[[oc:1382]]
+[[os:1382]]
+[[pi:१३८२]]
+[[pl:1382]]
+[[pt:1382]]
+[[ro:1382]]
+[[ru:1382 год]]
+[[sa:१३८२]]
+[[scn:1382]]
+[[simple:1382]]
+[[sk:1382]]
+[[sl:1382]]
+[[sq:1382]]
+[[sr:1382]]
+[[su:1382]]
+[[sv:1382]]
+[[sw:1382]]
+[[th:พ.ศ. 1925]]
+[[tl:1382]]
+[[tr:1382]]
+[[tt:1382]]
+[[uk:1382]]
+[[uz:1382]]
+[[vec:1382]]
+[[zh:1382年]]
+[[zh-yue:1382年]]
