--- a/1385.mw
+++ b/1385.mw
@@ -4,4 +4,95 @@
 
 [[Categorie:1380-1389]]
 
+[[af:1385]]
+[[am:1385 እ.ኤ.አ.]]
+[[an:1385]]
+[[ar:1385]]
+[[ast:1385]]
+[[az:1385]]
+[[be:1385]]
+[[be-x-old:1385]]
+[[bg:1385]]
+[[bh:१३८५]]
+[[bn:১৩৮৫]]
+[[bpy:মারি ১৩৮৫]]
+[[br:1385]]
+[[bs:1385]]
+[[ca:1385]]
+[[co:1385]]
+[[cs:1385]]
+[[csb:1385]]
+[[cv:1385]]
+[[cy:1385]]
+[[da:1385]]
+[[de:1385]]
+[[el:1385]]
+[[en:1385]]
+[[eo:1385]]
+[[es:1385]]
+[[et:1385]]
+[[eu:1385]]
+[[fi:1385]]
+[[fr:1385]]
+[[fy:1385]]
+[[gd:1385]]
+[[gl:1385]]
+[[he:1385]]
+[[hi:1385]]
+[[hr:1385.]]
+[[ht:1385 (almanak jilyen)]]
+[[hu:1385]]
+[[hy:1385]]
+[[id:1385]]
+[[io:1385]]
+[[is:1385]]
+[[it:1385]]
+[[ja:1385年]]
+[[jv:1385]]
+[[ka:1385]]
+[[ko:1385년]]
+[[ksh:Joohr 1385]]
+[[la:1385]]
+[[lb:1385]]
+[[lij:1385]]
+[[lt:XIV amžiaus 9-as dešimtmetis#1385]]
+[[map-bms:1385]]
+[[mi:1385]]
+[[mk:1385]]
+[[mr:इ.स. १३८५]]
+[[ms:1385]]
+[[nah:1385]]
+[[nap:1385]]
+[[nds:1385]]
+[[nds-nl:1385]]
+[[new:१३८५]]
 [[nl:1385]]
+[[nn:1385]]
+[[no:1385]]
+[[nrm:1385]]
+[[oc:1385]]
+[[os:1385]]
+[[pi:१३८५]]
+[[pl:1385]]
+[[pt:1385]]
+[[ro:1385]]
+[[ru:1385 год]]
+[[sa:१३८५]]
+[[scn:1385]]
+[[simple:1385]]
+[[sk:1385]]
+[[sl:1385]]
+[[sq:1385]]
+[[sr:1385]]
+[[su:1385]]
+[[sv:1385]]
+[[sw:1385]]
+[[th:พ.ศ. 1928]]
+[[tl:1385]]
+[[tr:1385]]
+[[tt:1385]]
+[[uk:1385]]
+[[uz:1385]]
+[[vec:1385]]
+[[zh:1385年]]
+[[zh-yue:1385年]]
