--- a/1446.mw
+++ b/1446.mw
@@ -4,4 +4,94 @@
 
 [[Categorie:15e eeuw]]
 
+[[af:1446]]
+[[am:1446 እ.ኤ.አ.]]
+[[an:1446]]
+[[ar:1446]]
+[[ast:1446]]
+[[az:1446]]
+[[be:1446]]
+[[be-x-old:1446]]
+[[bg:1446]]
+[[bh:१४४६]]
+[[bn:১৪৪৬]]
+[[bpy:মারি ১৪৪৬]]
+[[br:1446]]
+[[bs:1446]]
+[[ca:1446]]
+[[co:1446]]
+[[cs:1446]]
+[[csb:1446]]
+[[cv:1446]]
+[[cy:1446]]
+[[da:1446]]
+[[de:1446]]
+[[el:1446]]
 [[en:1446]]
+[[eo:1446]]
+[[es:1446]]
+[[et:1446]]
+[[eu:1446]]
+[[fi:1446]]
+[[fr:1446]]
+[[fy:1446]]
+[[gd:1446]]
+[[gl:1446]]
+[[he:1446]]
+[[hi:1446]]
+[[hr:1446.]]
+[[ht:1446 (almanak jilyen)]]
+[[hu:1446]]
+[[hy:1446]]
+[[ia:1446]]
+[[id:1446]]
+[[io:1446]]
+[[is:1446]]
+[[it:1446]]
+[[ja:1446年]]
+[[jv:1446]]
+[[ka:1446]]
+[[ko:1446년]]
+[[ksh:Joohr 1446]]
+[[la:1446]]
+[[lb:1446]]
+[[lt:XV amžiaus 5-as dešimtmetis#1446]]
+[[map-bms:1446]]
+[[mi:1446]]
+[[mk:1446]]
+[[mr:इ.स. १४४६]]
+[[ms:1446]]
+[[nah:1446]]
+[[nap:1446]]
+[[new:१४४६]]
+[[nl:1446]]
+[[nn:1446]]
+[[no:1446]]
+[[nrm:1446]]
+[[oc:1446]]
+[[os:1446]]
+[[pi:१४४६]]
+[[pl:1446]]
+[[pt:1446]]
+[[ro:1446]]
+[[ru:1446 год]]
+[[sa:१४४६]]
+[[scn:1446]]
+[[simple:1446]]
+[[sk:1446]]
+[[sl:1446]]
+[[sq:1446]]
+[[sr:1446]]
+[[su:1446]]
+[[sv:1446]]
+[[sw:1446]]
+[[th:พ.ศ. 1989]]
+[[tl:1446]]
+[[tr:1446]]
+[[tt:1446]]
+[[uk:1446]]
+[[uz:1446]]
+[[vec:1446]]
+[[vo:1446]]
+[[zh:1446年]]
+[[zh-yue:1446年]]
