--- a/1527.mw
+++ b/1527.mw
@@ -6,4 +6,95 @@
 
 [[Categorie:1520-1529]]
 
+[[af:1527]]
+[[am:1527 እ.ኤ.አ.]]
+[[an:1527]]
+[[ar:1527]]
+[[ast:1527]]
+[[az:1527]]
+[[be:1527]]
+[[be-x-old:1527]]
+[[bg:1527]]
+[[bh:१५२७]]
+[[bn:১৫২৭]]
+[[bpy:মারি ১৫২৭]]
+[[br:1527]]
+[[bs:1527]]
+[[ca:1527]]
+[[co:1527]]
+[[cs:1527]]
+[[cv:1527]]
+[[cy:1527]]
+[[da:1527]]
+[[de:1527]]
+[[el:1527]]
 [[en:1527]]
+[[eo:1527]]
+[[es:1527]]
+[[et:1527]]
+[[eu:1527]]
+[[fi:1527]]
+[[fr:1527]]
+[[fy:1527]]
+[[ga:1527]]
+[[gd:1527]]
+[[gl:1527]]
+[[he:1527]]
+[[hi:1527]]
+[[hr:1527.]]
+[[ht:1527 (almanak jilyen)]]
+[[hu:1527]]
+[[hy:1527]]
+[[ia:1527]]
+[[id:1527]]
+[[io:1527]]
+[[is:1527]]
+[[it:1527]]
+[[ja:1527年]]
+[[jv:1527]]
+[[ka:1527]]
+[[ko:1527년]]
+[[ksh:Joohr 1527]]
+[[la:1527]]
+[[lb:1527]]
+[[lt:XVI amžiaus 3-as dešimtmetis#1527]]
+[[map-bms:1527]]
+[[mi:1527]]
+[[mk:1527]]
+[[mr:इ.स. १५२७]]
+[[ms:1527]]
+[[nah:1527]]
+[[nap:1527]]
+[[nds:1527]]
+[[new:१५२७]]
+[[nl:1527]]
+[[nn:1527]]
+[[no:1527]]
+[[nov:1527]]
+[[nrm:1527]]
+[[oc:1527]]
+[[os:1527]]
+[[pi:१५२७]]
+[[pl:1527]]
+[[pt:1527]]
+[[ro:1527]]
+[[ru:1527 год]]
+[[sa:१५२७]]
+[[scn:1527]]
+[[simple:1527]]
+[[sk:1527]]
+[[sl:1527]]
+[[sq:1527]]
+[[sr:1527]]
+[[su:1527]]
+[[sv:1527]]
+[[sw:1527]]
+[[th:พ.ศ. 2070]]
+[[tl:1527]]
+[[tr:1527]]
+[[uk:1527]]
+[[uz:1527]]
+[[vec:1527]]
+[[wa:1527]]
+[[zh:1527年]]
+[[zh-yue:1527年]]
