--- a/1598.mw
+++ b/1598.mw
@@ -4,4 +4,95 @@
 
 [[Categorie: 1590-1599]]
 
+[[af:1598]]
+[[am:1598 እ.ኤ.አ.]]
+[[an:1598]]
+[[ar:1598]]
+[[ast:1598]]
+[[az:1598]]
+[[be:1598]]
+[[be-x-old:1598]]
+[[bg:1598]]
+[[bh:१५९८]]
+[[bn:১৫৯৮]]
+[[bpy:মারি ১৫৯৮]]
+[[br:1598]]
+[[bs:1598]]
+[[ca:1598]]
+[[co:1598]]
+[[cs:1598]]
+[[cv:1598]]
+[[cy:1598]]
+[[da:1598]]
+[[de:1598]]
+[[el:1598]]
 [[en:1598]]
+[[eo:1598]]
+[[es:1598]]
+[[et:1598]]
+[[eu:1598]]
+[[fi:1598]]
+[[fr:1598]]
+[[fy:1598]]
+[[ga:1598]]
+[[gd:1598]]
+[[gl:1598]]
+[[he:1598]]
+[[hi:1598]]
+[[hr:1598.]]
+[[ht:1598 (almanak gregoryen)]]
+[[hu:1598]]
+[[hy:1598]]
+[[ia:1598]]
+[[id:1598]]
+[[io:1598]]
+[[is:1598]]
+[[it:1598]]
+[[ja:1598年]]
+[[jv:1598]]
+[[ka:1598]]
+[[ko:1598년]]
+[[ksh:Joohr 1598]]
+[[la:1598]]
+[[lb:1598]]
+[[lmo:1598]]
+[[lt:XVI amžiaus 10-as dešimtmetis#1598]]
+[[map-bms:1598]]
+[[mi:1598]]
+[[mk:1598]]
+[[mr:इ.स. १५९८]]
+[[ms:1598]]
+[[nah:1598]]
+[[nap:1598]]
+[[nds:1598]]
+[[new:१५९८]]
+[[nl:1598]]
+[[nn:1598]]
+[[no:1598]]
+[[nov:1598]]
+[[nrm:1598]]
+[[oc:1598]]
+[[os:1598]]
+[[pi:१५९८]]
+[[pl:1598]]
+[[pt:1598]]
+[[ro:1598]]
+[[ru:1598 год]]
+[[sa:१५९८]]
+[[scn:1598]]
+[[simple:1598]]
+[[sk:1598]]
+[[sl:1598]]
+[[sq:1598]]
+[[sr:1598]]
+[[su:1598]]
+[[sv:1598]]
+[[sw:1598]]
+[[th:พ.ศ. 2141]]
+[[tl:1598]]
+[[tr:1598]]
+[[uk:1598]]
+[[uz:1598]]
+[[vec:1598]]
+[[zh:1598年]]
+[[zh-yue:1598年]]
