--- a/842.mw
+++ b/842.mw
@@ -4,4 +4,82 @@
 
 [[Categorie:9e eeuw]]
 
+[[af:842]]
+[[am:842 እ.ኤ.አ.]]
+[[an:842]]
+[[ar:842]]
+[[ast:842]]
+[[az:842]]
+[[be:842]]
+[[bg:842]]
+[[bh:८४२]]
+[[bn:৮৪২]]
+[[bpy:মারি ৮৪২]]
+[[br:842]]
+[[bs:842]]
+[[ca:842]]
+[[co:842]]
+[[cs:842]]
+[[csb:842]]
+[[cv:842]]
+[[cy:842]]
+[[da:842]]
+[[de:842]]
+[[el:842]]
+[[en:842]]
+[[eo:842]]
+[[es:842]]
+[[et:842]]
+[[eu:842]]
+[[fi:842]]
+[[fr:842]]
+[[gl:842]]
+[[he:842]]
+[[hi:842]]
+[[hr:842.]]
+[[ht:842 (almanak jilyen)]]
+[[hu:842]]
+[[id:842]]
+[[io:842]]
+[[it:842]]
+[[ja:842年]]
+[[jv:842]]
+[[ka:842]]
+[[ko:842년]]
+[[ksh:Joohr 842]]
+[[la:842]]
+[[lb:842]]
+[[lmo:842]]
+[[map-bms:842]]
+[[mk:842]]
+[[mr:इ.स. ८४२]]
+[[ms:842]]
+[[nah:842]]
+[[nap:842]]
+[[new:८४२]]
 [[nl:842]]
+[[nn:842]]
+[[no:842]]
+[[oc:842]]
+[[pi:८४२]]
+[[pl:842]]
+[[pt:842]]
+[[ro:842]]
+[[ru:842 год]]
+[[sa:८४२]]
+[[scn:842]]
+[[simple:842]]
+[[sk:842]]
+[[sl:842]]
+[[sq:842]]
+[[sr:842]]
+[[su:842]]
+[[sv:842]]
+[[sw:842]]
+[[th:พ.ศ. 1385]]
+[[tr:842]]
+[[tt:842]]
+[[uk:842]]
+[[uz:842]]
+[[vec:842]]
+[[zh:842年]]
