--- a/843.mw
+++ b/843.mw
@@ -3,4 +3,86 @@
 
 [[Categorie:9e eeuw]]
 
+[[af:843]]
+[[am:843 እ.ኤ.አ.]]
+[[an:843]]
+[[ar:843]]
+[[ast:843]]
+[[az:843]]
+[[be:843]]
+[[bg:843]]
+[[bh:८४३]]
+[[bn:৮৪৩]]
+[[bpy:মারি ৮৪৩]]
+[[br:843]]
+[[bs:843]]
+[[ca:843]]
+[[co:843]]
+[[cs:843]]
+[[csb:843]]
+[[cv:843]]
+[[cy:843]]
+[[da:843]]
+[[de:843]]
+[[el:843]]
+[[en:843]]
+[[eo:843]]
+[[es:843]]
+[[et:843]]
+[[eu:843]]
+[[fi:843]]
+[[fr:843]]
+[[fy:843]]
+[[gd:843]]
+[[gl:843]]
+[[he:843]]
+[[hi:843]]
+[[hr:843.]]
+[[ht:843 (almanak jilyen)]]
+[[hu:843]]
+[[id:843]]
+[[io:843]]
+[[is:843]]
+[[it:843]]
+[[ja:843年]]
+[[jv:843]]
+[[ka:843]]
+[[ko:843년]]
+[[ksh:Joohr 843]]
+[[la:843]]
+[[lb:843]]
+[[lmo:843]]
+[[ln:843]]
+[[lv:843]]
+[[map-bms:843]]
+[[mk:843]]
+[[mr:इ.स. ८४३]]
+[[ms:843]]
+[[nah:843]]
+[[nap:843]]
+[[new:८४३]]
 [[nl:843]]
+[[nn:843]]
+[[no:843]]
+[[oc:843]]
+[[pi:८४३]]
+[[pl:843]]
+[[pt:843]]
+[[ro:843]]
+[[ru:843 год]]
+[[sa:८४३]]
+[[scn:843]]
+[[sk:843]]
+[[sl:843]]
+[[sq:843]]
+[[sr:843]]
+[[su:843]]
+[[sv:843]]
+[[sw:843]]
+[[th:พ.ศ. 1386]]
+[[tr:843]]
+[[tt:843]]
+[[uk:843]]
+[[uz:843]]
+[[vec:843]]
+[[zh:843年]]
