*Empty MediaWiki Message*

--- a/Brugge.mw
+++ b/Brugge.mw
@@ -39,7 +39,7 @@
 |datum4=01/01/2006
 |}}
 
-'''Brugge''' is d'oofstad en de grotste [[stad]] van de [[Vloandern|Vlamsche]] provinsje [[West-Vloandern|West-Vloandern]] en van 't [[arroundissement]] [[Arroundissement Brugge|Brugge]]. 't Ligt in 't nôordwestn van [[België]].
+'''Brugge''' is d'oofdstad en de grotste [[stad]] van de [[Vloandern|Vlamsche]] provinsje [[West-Vloandern|West-Vloandern]] en van 't [[arroundissement]] [[Arroundissement Brugge|Brugge]]. 't Ligt in 't nôordwestn van [[België]].
 
 D'oekde stad èt de vorme van 'n ei en is entwat van een 430 [[hectoare|ectoarn]] grôot. Hêel de stad is mêer of 13 840 ectoarn grôot, woarvan dan der 193,7 ectoarn in zêe liggn. Dêelgemêenten zyn [[Kôolkerke]], [[Sint-Andries]], [[Sinte-Machiels]], [[Assebroeke]], [[Sinte-Kruus]], [[Dizzêle]], [[Zêebrugge]]  en [[Lissewege]]. Der weunn mêer of 116 000 menschen in Brugge, woavan een goeie 20 000 in 't center van 't stad.
 
