--- a/Radio_2.mw
+++ b/Radio_2.mw
@@ -9,7 +9,7 @@
 Een poar van de bekenste Radio 2 programma's zyn en woarn: [[De Pre Historie]], [[Top 30]], [[Funiculi Funicula]], [[Vragen Staat Vrij]], [[Het Schurend Scharniertje]], ....
 
 ==Frequenties==
-In [[West-Vloandern]] keun je Radio beluustern ip 100.1Mhz.
+In [[West-Vloandern]] keun je Radio 2 beluustern ip 100.1Mhz.
 
 ==Externe koppelienge==
 *[http://radio2.be/hoofdpagina.cfm Officieeln site]
