--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -144,7 +144,7 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 13 || style="text-align:left;" | [[Cercle Brugge]] - '''Club Brugge''' || 1 - 2 || 30 || 1
 |-
-| 14 || style="text-align:left;" | AA Gent - Club Brugge || 0 - 0 || 31 || 1
+| 14 || style="text-align:left;" | Club Brugge - AA Gent || 0 - 0 || 31 || 1
 |-
 | 15 || style="text-align:left;" | [[KSV Roeselare]] - '''Club Brugge''' || 1 - 2 || 34 || 1
 |-
@@ -152,7 +152,7 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 18 || style="text-align:left;" | Bergen - '''Club Brugge''' || 0 - 1 || 40 || 1
 |-
-| 17* || style="text-align:left;" | Club Brugge - Westerlo || 0 - 0 || 41 || 1
+| 17* || style="text-align:left;" | Westerlo - Club Brugge || 0 - 0 || 41 || 1
 |-
 | 19 || style="text-align:left;" | '''Club Brugge''' - G. Beerschot || 3 - 0 || 44 || 1
 |-
@@ -177,6 +177,8 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 | 29 || style="text-align:left;" | SV Zulte Waregem - '''Club Brugge''' || 2 - 3 || 57 || 3
 |-
 | 30 || style="text-align:left;" | '''Club Brugge''' - Cercle Brugge || 1 - 0 || 60 || 3
+|-
+| 31 || style="text-align:left;" | AA Gent - Club Brugge || 0 - 0 || 61 || 3
 |}
 <sup>*</sup>Mats uutgesteld gewist van 't slicht weer
 
