--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -120,7 +120,7 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 1 || style="text-align:left;" | '''Club Brugge''' - Bergen || 1 - 0 || 3 || 1
 |-
-| 2 || style="text-align:left;" |Germinal Beerschot - '''Club Brugge''' || 0 - 1 || 6 || 1
+| 2 || style="text-align:left;" | Germinal Beerschot - '''Club Brugge''' || 0 - 1 || 6 || 1
 |-
 | 3 || style="text-align:left;" | '''Club Brugge''' - Sint-Truiden VV || 3 - 2 || 9 || 1
 |-
@@ -154,7 +154,7 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 17* || style="text-align:left;" | Westerlo - Club Brugge || 0 - 0 || 41 || 1
 |-
-| 19 || style="text-align:left;" | '''Club Brugge''' - G. Beerschot || 3 - 0 || 44 || 1
+| 19 || style="text-align:left;" | '''Club Brugge''' - Germinal Beerschot || 3 - 0 || 44 || 1
 |-
 | 20 || style="text-align:left;" | Sint-Truiden VV - Club Brugge || 1 - 1 || 45 || 1
 |-
