--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -140,7 +140,7 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 11 || style="text-align:left;" | Racing Genk - '''Club Brugge''' || 1 - 2 || 24 || 2
 |-
-| 12 || style="text-align:left;" | '''Club Brugge''' - [[SV Zulte Waregem]] || 1 - 0 || 27 || 1
+| 12 || style="text-align:left;" | '''Club Brugge''' - [[SV Zulte Woaregem]] || 1 - 0 || 27 || 1
 |-
 | 13 || style="text-align:left;" | [[Cercle Brugge]] - '''Club Brugge''' || 1 - 2 || 30 || 1
 |-
@@ -174,7 +174,7 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 28 || style="text-align:left;" | Club Brugge - '''Racing Genk''' || 2 - 6 || 54 || 3
 |-
-| 29 || style="text-align:left;" | SV Zulte Waregem - '''Club Brugge''' || 2 - 3 || 57 || 3
+| 29 || style="text-align:left;" | SV Zulte Woaregem - '''Club Brugge''' || 2 - 3 || 57 || 3
 |-
 | 30 || style="text-align:left;" | '''Club Brugge''' - Cercle Brugge || 1 - 0 || 60 || 3
 |-
