--- a/Club_Brugge_KV.mw
+++ b/Club_Brugge_KV.mw
@@ -150,9 +150,9 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 16 || style="text-align:left;" | '''Club Brugge''' - [[RSC Anderlecht]] || 1 - 0 || 37 || 1
 |-
-| 18 || style="text-align:left;" | Bergen - '''Club Brugge''' || 0 - 1 || 40 || 1
+| 17 || style="text-align:left;" | Westerlo - Club Brugge || 0 - 0 || 41 || 1
 |-
-| 17* || style="text-align:left;" | Westerlo - Club Brugge || 0 - 0 || 41 || 1
+| 18 || style="text-align:left;" | Bergen - '''Club Brugge''' || 0 - 1 || 40 || 1
 |-
 | 19 || style="text-align:left;" | '''Club Brugge''' - Germinal Beerschot || 3 - 0 || 44 || 1
 |-
@@ -180,7 +180,6 @@ De vôorbereidienge start traditioneel mè oefnmatchkes teegn ploegn uut loager 
 |-
 | 31 || style="text-align:left;" | AA Gent - Club Brugge || 0 - 0 || 61 || 3
 |}
-<sup>*</sup>Mats uutgesteld gewist van 't slicht weer
 
 ===Uutslaagn beker===
 {| border="0" cellpadding="5" cellspacing="0" align="centre" style="border: 1px solid #F6CCDA;background-color:seashell;text-align:center;"
