*Empty MediaWiki Message*

--- a/Brugge.mw
+++ b/Brugge.mw
@@ -211,9 +211,9 @@ D'er zyn nie zo vele Bruggeliengn mè die nog echt goe Brugs klappn, mor in verg
 **O.L.V.-ter-Potterie
 
 =====Partikuliere musees=====
-*Den Boend (tentoônstelliengsruumten)
-*Bogardenkapelle (tentoônstelliengsruumte)
-*Jan Garemijnzoale (tentoônstelliengsruumte)
+*Den Boend (tentôonstelliengsruumten)
+*Bogardenkapelle (tentôonstelliengsruumte)
+*Jan Garemijnzoale (tentôonstelliengsruumte)
 *[[Begynof (Brugge)|Begynuzetje]] 
 *Choco-Story (chokolamusee)
 *Diamantmusee Brugge 
@@ -242,11 +242,11 @@ Der is e voart van Brugge nor [[Ostende (stad)|Ostende]], van Brugge no [[Gent]]
 
 Over d'autostrade ku je vanuut Brugge den [[E40]] pakkn no Gent en [[Brussel|Brusel]] en in d' andere richtienge no Veurne en Calais, de [[E403]] no [[Kortryk]] en [[Doornik|Dôornik]], den [[A10]] nor Ostende en den N31 no Zêebrugge (da zyn nog gen vulle autostraden, mè nog veel kruusiengen da'n ze nog moeten vervangen mè tunnils en bruggen). 
 
-Vanuut de grôte stoatie van Brugge is 't er per eure mingstens 1 tring nor ol d'andere belangrikke steedn van België en zyn der ôok nog verschillige mêer platselikke en regionoale trings. In Sinte-Pieters is 't er nog e klêen stoatietje, nl. Brugge-Sint-Pieters.
+Vanuut de grôte stoatie van Brugge is 't er per eure mingstens één tring nor ol d'andere belangryke steedn van België en zyn der ôok nog verschillige mêer platselikke en regionoale trings. In Sinte-Pieters is 't er nog e klêen stoatietje, nl. Brugge-Sint-Pieters.
 
 Ook den [[Thalys]] van [[Parys]] over Brussel toet in Ostende stopt in Brugge.
 
-'t Dichste vliegpling by Brugge ligt in Ostende, ip oengevêer 30km van 't center van Brugge: D' [[Internationoale Luchtoavn Ostende-Brugge]]
+'t Dichtste vliegpling by Brugge ligt in Ostende, ip oengevêer 30km van 't center van Brugge: D'[[Internationoale Luchtoavn Ostende-Brugge]]
 
 ==Voetbol==
 [[Image:Janbreydelstadion.jpg|left|thumb|180px|Jan Breydelstadion]]
@@ -266,13 +266,13 @@ Sedert de kiezinge van oktobere 2006 is 't er e bestier van CD&V/NVA met sp.a/Sp
 * [[Renaat Landuyt]]: Minister van mobiliteit en de [[Nôordzêe]]
 * [[Luc Van Lierde]]: Triatleet
 * [[Geert Hoste]]: [[Kluchtigoard]] moar ipgegroeid in [[Woardamme]] ([[Ôostkamp]])
-* [[Bruno De Roover]]: Striptekenoare
+* [[Bruno De Roover]]: Striptêkenoare
 * [[Lieven Verstraete]]: Nieuwslezer by de VRT
 * [[Willy Lustenhouwer]]: Komiek
 * [[Guido Depraetere]]: TV-persôonlikheid en [[Baziel]]-vertolker
 * [[Stéphanie Meire]]: Ex-Miss België, actrice
 * [[Karel Deruwe]]: Acteur
-* [[Karel De Wolf]]: Apotheker, schrêef n poar boekstjes in 't "vereedeld" brugs
+* [[Karel De Wolf]]: Apotheker, schrêef n poar boekstjes in 't "veredeld" brugs
 * [[Hugo Claus]]: Schryver en dichter
 * [[Pieter Aspe]]: Schryver
 * [[Phaedra Hoste]]: Fotomodel
@@ -283,7 +283,7 @@ Sedert de kiezinge van oktobere 2006 is 't er e bestier van CD&V/NVA met sp.a/Sp
 * [[Tine Dusauchoit]], zus van Chris: ex-voorzitter [[Artsen zonder Grenzen]]
 * [[Benny Scott]]: Zanger
 * [[Maurits Sabbe]]: Schryver
-* [[Jules Fonteyne]]: Schilder, têekenoare en etsere
+* [[Jules Fonteyne]]: Schilder, têkenoare en etsere
 * [[Anselmus Adornes]]
 
 ==Soamnwerkienge==
