*Empty MediaWiki Message*

--- a/Boudewyn_III_van_Vloandern.mw
+++ b/Boudewyn_III_van_Vloandern.mw
@@ -1,1 +1,6 @@
-Boudewyn III (940 - 1 januari 962) was groaf van Vloandern tot an zyn dood. T'er is letter geweten van zyn leevn. Boudewyn III was den enige zeune van groaf Arnuf I en van Aleidis (of Adela) van Vermandois.
+Boudewyn III (940 - 1 januari 962) was groaf van Vloandern tot an zyn dood. T'er is letter geweten van zyn leevn. 
+
+Boudewyn III was den enige zeune van groaf Arnuf I en van Aleidis (of Adela) van Vermandois. Zin voader moakte hem in 958 meegroaf, moar ie ging al vier joar loater dood. In 961 trowdege ie nog me Mathilde van Saksen (942 - 25 meie 1008), dochter van Herman Billung en van Hildergarde van Westerburg.
+
+Uldere zeune, Arnulf II, erfdege 't groafschap oa Boudewyn's voader dood ging. Ulder dochter Bertha trowdege met Gerold I van Geneve.
+Achter Boudewyn's dood trouwdege zyn weduwe Mathilde me Godfried van Verdun.
