--- a/1_januoari.mw
+++ b/1_januoari.mw
@@ -8,6 +8,7 @@
 *[[1890]] - [[Alphonse Six]]
 
 ==Gestorvn==
+*[[962]] - [[Boudewyn III van Vloandern]]
 *[[1944]] - [[Sir Edwin Lutyens]]
 *[[2001]] - [[Remi Capoen]]
 
