--- a/Dadipark.mw
+++ b/Dadipark.mw
@@ -1,3 +1,4 @@
+[[Afbeelding:Dadizele - Dadipark 1.jpg|thumb|'t Verlaotn Dadipark]]
 '''Dadipark''' es e voormalig [[pretpark]] in [[Deisel]]. 't Wos et oudste pretpark van hêel [[België]]. 
 
 Dadipark wos e redelik grôot speelpling me loopbruggn, slêerboann, renn en ander speelplingtoestelln. Vele Vloamiengn die in under jounge joaren nog na Dadipark gewist zyn, erinnern under overre ol die grôte loopbrugge, me wiebelnde outne plankn. 
