*Empty MediaWiki Message*

--- a/Christine_Comyn.mw
+++ b/Christine_Comyn.mw
@@ -50,7 +50,7 @@ Verênigde Stoatn van Amerika:
 :New York Art Expo, New York
 :Millennium Art Gallery, Tarzana, Los Angeles
 :Miami Art Fair, Florida
-:Kenneth Raymound Gallery, Boca Raton, Florida
+:Kenneth Raymond Gallery, Boca Raton, Florida
 :Palm Desert Art Gallery, Palm Desert, California.
 
 Portugal: Galerie Londot, Quinta do Lago.</br>
