--- a/Willem_Vermandere.mw
+++ b/Willem_Vermandere.mw
@@ -25,7 +25,7 @@ In 't begun wos tie voarol gekend van zyn liedjes in 't West-Vlams.  Ze gienkn o
 * ''Ik Wil Maar Zeggen'' (1988)
 * ''De Eerste Jaren'' (1989)
 * ''Lat mie maar lopen'' (1991)
-* ''Een Avound In Brussel'' (1990, opnoame in 'n Ancienne Belgique)
+* ''Een Avond In Brussel'' (1990, opnoame in 'n Ancienne Belgique)
 * ''Help Mij'' (1993)
 * ''Mijn Vlaanderland'' (1995)
 * ''De Vergeten Liedjes'' (1996)
