--- a/Keun.mw
+++ b/Keun.mw
@@ -15,24 +15,24 @@
 |afbeelding2=[[image:Oryctolagus cuniculus geographical distribution.jpeg|250px|Leefgebied konnyn]]
 |afbeelding2tekst=Verspreidiengsgebied wild keun
 }}
-E '''keun''' of '''konyn''' (''Kortryk'') (in 17de eeuws West-Vlams '''conin''') is e [[zoogdier]], dat in de orde van de [[oaze-achtigen]] zit. 't Ziet er ruwweg gezien e bitje uut lik e [[knoagdier]], moa 't is dus nie van die orde. E keun is d'enigste sôorte in 't geslacht ''Oryctolagus''. 't Wordt dikkers voe [[uusdier]] g'oen.
+E '''keun''' of '''konyn''' (''Kortryk'') (in 17de eeuws West-Vlams '''conin''') is e [[zoogdier]], dat in de orde van de [[oaze-achtigen]] zit. 't Ziet er ruwweg gezien e bitje uut lik e [[knoagdier]], moa 't is dus nie van die orde. E keun is d'enigste sôorte in 't geslacht ''Oryctolagus''. 't Wordt dikkers voe [[uusdier]] g'oudn.
 
-Qua grotte zit e keun tusschn de [[echte oazen]] en de [[fluutoazen]] in. D'achterpôotn van 't keun zyn in veroedienge vele korter dan dedie van d'oazn, moa langer dan dedie van de fluutoazen. De buuk is blêker va kleur dan de [[rik]], en dikkers wit van kleur. Ook an 'n ounderkant va z'n stèèrt en z'n pôotn is'tn wit. E keun it plantoardige voedienge, en j'it ook z'n eigen kuttels ip ([[caecotrofie]])
+Qua grotte zit e keun tusschn de [[echte oazen]] en de [[fluutoazen]] in. D'achterpôotn van 't keun zyn in veroudienge vele korter dan dedie van d'oazn, moa langer dan dedie van de fluutoazen. De buuk is blêker va kleur dan de [[rik]], en dikkers wit van kleur. Ook an 'n ounderkant va z'n steirt en z'n pôotn is'tn wit. E keun it plantoardige voedienge, en j'it ook z'n eigen kuttels ip ([[caecotrofie]]).
 't Vintje wordt ne keune[[buk]] genoemd, en 't vrouwke een keune[[moere]]. Van sommigste minschn wordt er ook gezeid da ze kwêekn lik de keuns: da wil zeggn da ze ol veel jounges ein.
 
-In de vôrige 2 êeuwn wos de klêinschoalige konynekwêek en middel om de armere bevolkienge an en extra verdienste t'elp'n en an goekôop vlêes. De velln (pels) vormdn ôok ne klêinen markt: via de konynemesjangs werdn de velln verkocht voe der konynefraks en -wanten van te moakn. In 't Ancien Régime was de keunekweêk verboon. Ge vient er nievers meldinge van in bronn lik [[staten van goed]]. 
+In de vôrige 2 êeuwn wos de klêenschoalige konynekwêek en middel om de armere bevolkienge an en extra verdienste t'elp'n en an goekôop vlêes. De velln (pels) vormdn ôok ne klênen markt: via de konynemesjangs werdn de velln verkocht voe der konynefraks en -wanten van te moakn. In 't Ancien Régime was de keunekwêek verboodn. Ge viendt er nievers meldinge van in bronn lik [[staten van goed]]. 
 <br>Anno 2006 is de konynekwêek in Vloanderen nie grôot ne mêe; ier en doar ne particulier en en poar beroepskwêkers.
-In West-Vlaandern is er nog een grote en oede keunekwekery: [[Kerkepolder]] in het dorp met de toepasselike name [[Moere]].
+In West-Vloandern ist er nog een grôte en oude keunekwekery: [[Kerkepolder]] in het dorp met de toepasselike name [[Moere]].
 <br> "Konyn met preumn" en "Konyn met bruun bier" zyn typisch Vloamsche gerechtn.
 
 ==Keunevlees==
-Keunevlees wordt gekenmerkt deur zen bleêk en mager vlees. 't Enigste vet dat er is, ip de schoern en round de niern kun je der azo of snien.
-De VLAM makt ton ook terecht reclame voe keunevlees met ne slogan "Konijn, gezound en fijn". 
-Ingeval da je moste twyfeln of da je ginnen haze vast et: hazevlees gaat van kleur no de paarse kant a't ves is, en ne keer dat 't gestoofd is, kleurt het gelik zwartachtig, beist da keunevlees assan bleêk is, zowel ves als gereêd gedaan. 
+Keunevlees wordt gekenmerkt deur z'n blêek en mager vlees. 't Enigste vet dat er is, ip de schoern en round de niern kun je der azo of snyen.
+De VLAM makt ton ook terecht reclame voe keunevlees met ne slogan "Konijn, gezond en fijn". 
+In geval da je moste twyfeln of da je ginnen haze vast et: hazevlees gaat van kleur no de paarse kant a't ves is, en ne keer dat 't gestoofd is, kleurt het gelik zwartachtig, beist da keunevlees assan blêek is, zowel ves als gerêed gedaan. 
 
 ==Recept==
 
-In Vlaandern is keunevlees surtoe bekend als "keun me pruum" of "keun me bier". Da latste beantwoordt meêst an de "standaardsmake". Keun me pruum is eerder zoete.
+In Vloandern is keunevlees surtout bekend als "keun me pruum" of "keun me bier". Da latste beantwoordt meêst an de "standaardsmake". Keun me pruum is eerder zoete.
 
 Voe keun me bier begun je best met een andjoentje of tweê in broksjes te snyen en te stoven. Beist bradt je in een panne al de stikken van 't keunevlees. Ge bradt ze schone bruun langs alle kanten. Ton zet je ne stoofpot ip 't vier, smyt er een bitje beuter of olie in, en ge smyt al de stikken keunevlees in de stoofpot, en smyt er de gestoofde andjoentjes over. Ton giet je in de stoofpot een flassche bruun bier. Da mag tafelbier zyn. Leffe en Duvel zyn even goed. Met kriek moe je 't nie proberen want ton wordt je vlees te droge. Voe de nissigheid en de bindienge van de sose leg je van boven ip 't vlees een stutte wo da je mostaard ip gesmêêrd et.
 
